--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/Ayansh-Client-Projects/rcgroup-openapi#readme",
   "dependencies": {
-    "@apidevtools/swagger-parser": "^10.0.3"
+    "@apidevtools/swagger-parser": "^10.0.3",
+    "yaml": "^1.10.2"
   }
 }
